src/events/events.module.css
/*------------------------------Upcoming Events--------------------------------*/
.eventsBody {
  max-width: 80%;
  margin: 0 auto;
  margin-bottom: 10%;
}

.eventsBody h2 {
  margin-top: 8%;
  margin-bottom: 4%;
}

.gridContainer {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
  grid-gap: 20px;
}

.upcoming {
  box-shadow: 5px 5px 8px 0 rgba(0, 0, 0, 0.3);
  position: relative;
}

.eventDescription {
  margin: 50px 30px;
  padding: 0;
}

.eventName {
  color: #000000;
  font-family: "Playfair Display", serif;
  font-size: 28px;
  text-align: center;
  letter-spacing: 1pt;
  margin: 0;
  padding-bottom: 5px;
  padding-top: 5px;
}

.eventDate {
  font-family: Montserrat;
  font-style: normal;
  font-weight: 500;
  font-size: 12px;
  line-height: 15px;
  text-align: center;
  color: #FEB14B;
  letter-spacing: 0.1vw;
  padding-bottom: 5px;
  padding-top: 5px;
  margin: 0;
}

.eventSummary {
  color: var(--light-grey);
  letter-spacing: 0.1vw;
  font-size: 10pt;
  font-family: "Montserrat", sans-serif;
  text-align: justify;
  font-weight: 300;
  padding: 0;
  padding-bottom: 5px;
  margin: 10px, 0;
  margin-top: 20px;
}

ul#links {
  list-style-type: none;
  margin: 0;
  padding: 0;
  display: inline-flex;
  text-align: center;
}

li.eventLink {
  margin: 10px 0px;
  margin-right: 5px;
  margin-bottom: 0px;
}

li.eventButton {
  margin: 10px 10px;
  margin-bottom: 0px;
}

.regButton {
	border: none;
	width: 150px;
	height: 36px;
	background-color: #e85f5c;
	box-shadow: 1px 1px 5px 0 rgba(0, 0, 0, 0.3);

	font-family: "Montserrat", sans-serif;
	font-style: normal;
	font-weight: 600;
	font-size: 12px;
	line-height: 15px;
	letter-spacing: 0.05em;
	color: #ffffff;
}

a.event {
  font-family: "Montserrat", sans-serif;
  color: #e85f5c;
  letter-spacing: 0.1vw;
  font-size: 10pt;
}

a:hover.event {
  font-family: "Montserrat", sans-serif;
  color: #feb14b;
  letter-spacing: 0.1vw;
  font-size: 10pt;
  text-decoration: none;
}

/*------------------------------Past Events--------------------------------*/
#pastEvents.gridContainer {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
  grid-gap: 20px;
}

.gridItem {
  display: flex;
  box-shadow: 5px 5px 8px 0 rgba(0, 0, 0, 0.3);
}

img.eventImages {
  max-width: 100%;
  object-fit: cover;
}

p.lookout {
  text-align: center;
}

#eventResources {
  text-transform: uppercase;
  color: #e85f5c;
  flex-basis: 33.33%;
  flex-shrink: 0;
  font-family: "Montserrat", sans-serif;
  font-weight: 600;
}

#resourcesDescription {
  font-family: "Montserrat", sans-serif;
  color: #4f4f4f;
}

/*---------------------------Loading Sign--------------------------*/
#eventsLoading {
  color: #feb14b;
  margin-top: 5%;
  margin-bottom: 3%;
}

#eventsLoadingContainer {
  display: flex;
  justify-content: center;
}

/*------------------------------Responsive Mobile Design--------------------------------*/
@media only screen and (max-width: 750px) {
  #resourcesDescription {
    display: none;
  }

  #eventResources {
    flex-basis: 100%;
  }
}

@media only screen and (max-width: 650px) {
  .eventsBody {
    max-width: 90%;
  }

  .gridContainer {
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
    grid-gap: 20px;
  }
}

@media only screen and (max-width: 600px) {
  li.eventButton {
    display: block;
    margin: 10px 0;
  }
  
  ul#links {
    display: block;
    float: none;
    width: 100%;
    text-align: center;
  }


  li.eventLink {
    margin: 10px 0;
  }
}

@media only screen and (max-width: 350px) {
  .eventsBody {
    max-width: 100%;
  }

  .gridContainer {
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
    grid-gap: 20px;
  }

  #pastEvents.gridContainer {
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
    grid-gap: 20px;
  }
}

